--- a/common.blocks/board/board.styl
+++ b/common.blocks/board/board.styl
@@ -68,6 +68,7 @@ col-highlight(col_width = $cols.default, cell_width = $cell-width)
 .board
 	position: relative
 	display: inline-block
+	padding-top: $header-height
 	max-width: $board-max-width
 	background-color: #000
 	font-family: 'Open Sans Condensed', sans-serif
@@ -75,17 +76,15 @@ col-highlight(col_width = $cols.default, cell_width = $cell-width)
 	cursor: default
 	text-align: left
 
-	&_padding
-		padding-top: $header-height
+	&_sticky
+		padding-top: 0
 
 	// sticky work only in FF
 	// in Chrome temp disabled due spec inconsistency
 	&__header
-		position: relative
-		position: sticky
-		top: 0
-		left: 0
+		position: absolute
 		z-index: 6
+		top: 0
 		width: 100%
 		height: $header-height
 		box-sizing: border-box
@@ -94,12 +93,11 @@ col-highlight(col_width = $cols.default, cell_width = $cell-width)
 		background: linear-gradient(0deg, #303539 0%, #3B424A 50%, #4D5358 100%)
 		color: #EEE
 
-		&_pos_fixed
+		&_fixed
 			position: fixed
-			top: 0
 
-		&_pos_rel
-			left: 0!important
+	&_sticky &__header
+		position: sticky
 
 	&__title
 		position: absolute
@@ -132,6 +130,10 @@ col-highlight(col_width = $cols.default, cell_width = $cell-width)
 		display: block
 		border-bottom: 3px solid #020609
 		white-space: nowrap
+		opacity: 1
+
+		&:hover
+			z-index: 2
 
 		&:last-child
 			border: 0
@@ -151,34 +153,26 @@ col-highlight(col_width = $cols.default, cell_width = $cell-width)
 		color: #FFF
 		cursor: pointer
 
-		&:before
-			content: '×'
-			position: absolute
-			right: 7px
-			top: 0
-			font-size: 1.5rem
-
 	&__checkbox
 		position: absolute
 		left: -1000%
 		visibility: hidden
 
 	&__checkbox:checked+&__row
-		z-index: 7
+		z-index: 5
 		pointer-events: none
 
 	&__checkbox:checked+&__row 	&__description
 		position: fixed
 		left: 50%
-		top: 50%
+		top: 120px
 		display: block
-		width: 600px
-		height: 400px
-		margin-left: -250px
-		margin-top: -250px
+		width: 70%
+		min-height: 400px
+		transform: translate(-50%)
 		padding: 20px
 		box-sizing: border-box
-		z-index: 8
+		z-index: 9
 		pointer-events: auto
 
 	&__time,
