--- a/common.blocks/flight-details/flight-details.styl
+++ b/common.blocks/flight-details/flight-details.styl
@@ -1,4 +1,13 @@
 .flight-details
+	box-shadow: 0 0 15px darken(#FFFE00, 15%)
+
+	&:before
+		content: '×'
+		position: absolute
+		right: 10px
+		top: 0
+		font-size: 2.5rem
+		line-height: 1
 
 	&__row
 		margin-bottom: 10px
