--- a/desktop.blocks/page/page.styl
+++ b/desktop.blocks/page/page.styl
@@ -10,6 +10,10 @@
 	background-color: #000
 	text-align: center
 
+	@media screen and (max-width: 1000px)
+		padding-left: 0
+		padding-right: 0
+
 	&_tall
 		min-height: 1500px
 
